--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>The Story - Free Bootstrap Theme</title>
+    <title>Jonathan Huang</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/flexslider.css">
     <link rel="stylesheet" href="css/templatemo-style.css">
 
-    [if lt IE 9]>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    [endif]
+    <![endif]-->
   </head>
 
   <body class="page">
@@ -37,8 +39,8 @@
 
                     <!-- site title -->
             <header class="box box-white">
-              <a href="javascript:void(0)" class="js-site-title">
-                <h1 class="box-text site-title-text">The Story</h1>
+              <a href="#" class="js-site-title">
+                <h1 class="box-text site-title-text">Jonathan Huang</h1>
               </a>
             </header>
 
@@ -54,13 +56,13 @@
 
                 <li data-nav-item-id="page-2" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-white box-nav-item js-nav-item pull-xs-right">
                     <a href="#page-2" class="block-keep-ratio-content box-nav-item-link">
-                        <span class="box-text box-text-nav-item flexbox-center">Gallery</span>
+                        <span class="box-text box-text-nav-item flexbox-center">Projects</span>
                     </a>
                 </li>
 
                 <li data-nav-item-id="page-3" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-white box-nav-item js-nav-item pull-xs-left">
                     <a href="#page-3" class="block-keep-ratio-content box-nav-item-link">
-                        <span class="box-text box-text-nav-item flexbox-center">Services</span>
+                        <span class="box-text box-text-nav-item flexbox-center">Resume</span>
                     </a>
                 </li>
 
@@ -81,7 +83,7 @@
             <section data-page-id="page-1" class="content js-content">
 
               <header class="box box-black margin-b-20">
-                <h2 class="box-text page-title-text">About the story</h2>
+                <h2 class="box-text page-title-text">About Me</h2>
               </header>
 
               <div class="content-text">
@@ -97,7 +99,7 @@
             <section data-page-id="page-2" class="content content-gallery js-content">
 
               <header class="box box-black margin-b-20">
-                  <h2 class="box-text page-title-text">Galllery</h2>
+                  <h2 class="box-text page-title-text">Projects</h2>
               </header>
 
               <div class="content-text content-text-gallery">
@@ -138,7 +140,7 @@
             <section data-page-id="page-3" class="content js-content">
 
               <header class="box box-black margin-b-20">
-                <h2 class="box-text page-title-text">Services</h2>
+                <h2 class="box-text page-title-text">Resume</h2>
               </header>
 
               <div class="content-text">
@@ -158,7 +160,7 @@
             <section data-page-id="page-4" class="content js-content">
 
               <header class="box box-black margin-b-20">
-                  <h2 class="box-text page-title-text">Contact</h2>
+                  <h2 class="box-text page-title-text">Contact Me</h2>
               </header>
 
               <div class="content-text">
@@ -193,9 +195,7 @@
       <footer class="row footer js-footer">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-          <p class="copyright-text">Copyright &copy; 2016 Company Name
-
-          | Design: <a href="http://www.templatemo.com/tm-480-story" target="_parent" title="Story Bootstrap Theme">The Story</a></p>
+<!--           <p class="copyright-text">Copyright &copy; 2016 Jonathan Huang</p> -->
 
         </div>
       </footer>
@@ -208,7 +208,6 @@
 
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/jquery.flexslider-min.js"></script>
-    <script src="js/jquery.backstretch.min.js"></script>
     <script src="js/templatemo-script.js"></script>
 
   </body>
