--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="header">
 
                     <!-- site title -->
-            <header class="box box-white">
+            <header class="box box-black">
               <a href="#" class="js-site-title">
                 <h1 class="box-text site-title-text">Jonathan Huang</h1>
               </a>
@@ -48,25 +48,25 @@
             <nav class="js-nav">
               <ul class="nav-items-container">
 
-                <li data-nav-item-id="page-1" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-white box-nav-item js-nav-item pull-xs-left">
+                <li data-nav-item-id="page-1" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-black box-nav-item js-nav-item pull-xs-left">
                     <a href="#page-1" class="block-keep-ratio-content box-nav-item-link">
                         <span class="box-text box-text-nav-item flexbox-center">About</span>
                     </a>
                 </li>
 
-                <li data-nav-item-id="page-2" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-white box-nav-item js-nav-item pull-xs-right">
+                <li data-nav-item-id="page-2" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-black box-nav-item js-nav-item pull-xs-right">
                     <a href="#page-2" class="block-keep-ratio-content box-nav-item-link">
                         <span class="box-text box-text-nav-item flexbox-center">Projects</span>
                     </a>
                 </li>
 
-                <li data-nav-item-id="page-3" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-white box-nav-item js-nav-item pull-xs-left">
+                <li data-nav-item-id="page-3" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-black box-nav-item js-nav-item pull-xs-left">
                     <a href="#page-3" class="block-keep-ratio-content box-nav-item-link">
                         <span class="box-text box-text-nav-item flexbox-center">Resume</span>
                     </a>
                 </li>
 
-                <li data-nav-item-id="page-4" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-white box-nav-item js-nav-item pull-xs-right">
+                <li data-nav-item-id="page-4" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-black box-nav-item js-nav-item pull-xs-right">
                     <a href="#page-4" class="block-keep-ratio-content box-nav-item-link">
                         <span class="box-text box-text-nav-item flexbox-center">Contact</span>
                     </a>
@@ -87,9 +87,12 @@
               </header>
 
               <div class="content-text">
-                <p>Story is free Bootstrap (v4.0 alpha 2) theme by <a rel="nofollow" href="http://www.templatemo.com" target="_parent">templatemo</a>. You can download, modify and use this layout for any website. Please tell your friends about us. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </p>
-                <p>Vivamus imperdiet tellus lobortis tellus fermentum, at varius purus tincidunt. Aenean quis tellus molestie, laoreet massa a, maximus est. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                <p>
+                  :)
+                  :)
+                  :)
+                  :)
+                  :)
                 </p>
               </div>
 
@@ -160,6 +163,7 @@
             <section data-page-id="page-4" class="content js-content">
 
               <header class="box box-black margin-b-20">
+
                   <h2 class="box-text page-title-text">Contact Me</h2>
               </header>
 
