--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="header">
 
                     <!-- site title -->
-            <header class="box box-black">
+            <header class="box">
               <a href="#" class="js-site-title">
                 <h1 class="box-text site-title-text">Jonathan Huang</h1>
               </a>
@@ -48,25 +48,25 @@
             <nav class="js-nav">
               <ul class="nav-items-container">
 
-                <li data-nav-item-id="page-1" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-black box-nav-item js-nav-item pull-xs-left">
+                <li data-nav-item-id="page-1" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-nav-item js-nav-item pull-xs-left">
                     <a href="#page-1" class="block-keep-ratio-content box-nav-item-link">
                         <span class="box-text box-text-nav-item flexbox-center">About</span>
                     </a>
                 </li>
 
-                <li data-nav-item-id="page-2" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-black box-nav-item js-nav-item pull-xs-right">
+                <li data-nav-item-id="page-2" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-nav-item js-nav-item pull-xs-right">
                     <a href="#page-2" class="block-keep-ratio-content box-nav-item-link">
                         <span class="box-text box-text-nav-item flexbox-center">Projects</span>
                     </a>
                 </li>
 
-                <li data-nav-item-id="page-3" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-black box-nav-item js-nav-item pull-xs-left">
+                <li data-nav-item-id="page-3" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-nav-item js-nav-item pull-xs-left">
                     <a href="#page-3" class="block-keep-ratio-content box-nav-item-link">
                         <span class="box-text box-text-nav-item flexbox-center">Resume</span>
                     </a>
                 </li>
 
-                <li data-nav-item-id="page-4" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-black box-nav-item js-nav-item pull-xs-right">
+                <li data-nav-item-id="page-4" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-nav-item js-nav-item pull-xs-right">
                     <a href="#page-4" class="block-keep-ratio-content box-nav-item-link">
                         <span class="box-text box-text-nav-item flexbox-center">Contact</span>
                     </a>
@@ -82,17 +82,19 @@
             <!-- about -->
             <section data-page-id="page-1" class="content js-content">
 
-              <header class="box box-black margin-b-20">
+              <header class="box margin-b-20">
                 <h2 class="box-text page-title-text">About Me</h2>
               </header>
 
               <div class="content-text">
                 <p>
-                  :)
-                  :)
-                  :)
-                  :)
-                  :)
+                  Hello! I'm a software engineer and a recent graduate from Dev Bootcamp. Before becoming enveloped in the world of programming, I graduated from UC San Diego with a B.S. in Human Biology. I loved the fast-paced atmosphere of the health care industry selflessly focused on helping out others.
+                </p>
+                <p>
+                  Near the end of my undergraduate career, I began to feel that the idea of being a doctor was mundane. Hearing my worries, a friend nudged me towards computer science. My first introductory course to C++ made me realize the exhilarating and endless possibilities of programming. With how quick the technology industry is expanding today, there are so many new technologies to learn and problems to solve. Coding provides the perfect opportunity to build something to potentially change people's lives.
+                </p>
+                <p>
+                  When I'm not coding it out, I enjoy taking walks, spending time with friends, and eating new and different foods. Please feel free to contact me about anything!
                 </p>
               </div>
 
@@ -101,13 +103,11 @@
             <!-- gallery -->
             <section data-page-id="page-2" class="content content-gallery js-content">
 
-              <header class="box box-black margin-b-20">
+              <header class="box box-border margin-b-20">
                   <h2 class="box-text page-title-text">Projects</h2>
               </header>
 
               <div class="content-text content-text-gallery">
-
-                <!-- <p>Credits go to <a rel="nofollow" href="http://unsplash.com">Unsplash</a> for images.</p> -->
 
                 <div class="flexslider-wrapper">
 
@@ -142,19 +142,12 @@
             <!-- services -->
             <section data-page-id="page-3" class="content js-content">
 
-              <header class="box box-black margin-b-20">
+              <header class="box margin-b-20">
                 <h2 class="box-text page-title-text">Resume</h2>
               </header>
 
               <div class="content-text">
-                <p>Download the story theme from templatemo. Quisque placerat turpis non tortor fringilla, in ornare magna eleifend. Etiam mattis varius fringilla.
-                </p>
-                <h4>Sub Title One</h4>
-                <p>Nullam tortor mauris, bibendum ac ex vel, auctor congue est. Aenean quis tellus molestie, laoreet massa a, maximus est. Interdum et malesuada fames ac ante ipsum primis.
-                </p>
-                <h4>Sub Title Two</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut sapien quis ante faucibus tempus. Nam ut dui vitae tellus vehicula porttitor in nec lorem.
-                </p>
+                <h4>Here's my Resume!</h4>
               </div>
 
             </section> <!-- #services -->
@@ -162,15 +155,15 @@
             <!-- contact -->
             <section data-page-id="page-4" class="content js-content">
 
-              <header class="box box-black margin-b-20">
+              <header class="box margin-b-20">
 
                   <h2 class="box-text page-title-text">Contact Me</h2>
               </header>
 
               <div class="content-text">
-                <p>In felis turpis, tincidunt a odio interdum, ornare interdum magna. Proin leo tortor, adipiscing et volutpat tincidunt, imperdiet sit amet purus.
-                </p>
-                <form action="index.html" method="post" class="contact-form">
+                <p>Check out my Github or LinkedIn</p>
+                <p>Or send me an email!</p>
+                <form action="MAILTO:jonwhuang@gmail.com" method="post" enctype="text/plain" class="contact-form">
 
                   <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6 form-group-2-col-left">
                     <input type="text" id="contact_name" name="contact_name" class="form-control" placeholder="Name" required/>
