Try contact form

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               <div class="content-text">
                 <p>Check out my Github or LinkedIn</p>
                 <p>Or send me an email!</p>
-                <form action="MAILTO:jonwhuang@gmail.com" method="post" enctype="text/plain" class="contact-form">
+                <form action="contact.php" method="post" class="contact-form">
 
                   <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6 form-group-2-col-left">
                     <input type="text" id="contact_name" name="contact_name" class="form-control" placeholder="Name" required/>
@@ -177,7 +177,7 @@
                   <div class="form-group">
                     <textarea id="contact_message" name="contact_message" class="form-control" rows="4" placeholder="Message" required></textarea>
                   </div>
-                  <button type="submit" class="btn btn-primary submit-btn">Send</button>
+                  <button type="submit" name="submit" class="btn btn-primary submit-btn">Send</button>
 
                 </form>
               </div>
