--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container-fluid">
 
       <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 col-xl-5">
+        <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 col-xl-5">
 
           <div class="header">
 
@@ -77,7 +77,7 @@
           </div> <!-- .header -->
         </div>
 
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 col-xl-7">
+        <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 col-xl-7">
           <div class="content-wrapper js-content-wrapper">
             <!-- about -->
             <section data-page-id="page-1" class="content js-content">
@@ -131,10 +131,10 @@
 
               </div>
 
-            </section> <!-- #gallery -->
+            </section> <!-- #projects -->
 
             <!-- services -->
-            <section data-page-id="page-3" class="content js-content">
+            <section data-page-id="page-3" class="content js-content margin-t-30p">
 
               <header class="box margin-b-20">
                 <h2 class="box-text page-title-text">Resume</h2>
@@ -144,19 +144,26 @@
                 <h4>Here's my Resume!</h4>
               </div>
 
-            </section> <!-- #services -->
+            </section> <!-- #resume -->
 
             <!-- contact -->
-            <section data-page-id="page-4" class="content js-content">
+            <section data-page-id="page-4" class="content js-content margin-t-30p">
 
               <header class="box margin-b-20">
 
                   <h2 class="box-text page-title-text">Contact Me</h2>
               </header>
 
-              <div class="content-text">
-                <p>Check out my Github or LinkedIn</p>
-                <p>Or send me an email!</p>
+              <div class="content-text contact-icons">
+                <div class="col-md-4 col-sm-4 col-xs-4">
+                  <a href="http://github.com/jonwhuang" target="_blank"><img src="/img/github.png"></a>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-4">
+                  <a href="http://www.linkedin.com/in/jonwhuang" target="_blank"><img src="/img/linkedin.png"></a>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-4">
+                  <a href="mailto:jonwhuang@gmail.com"><img src="/img/email.png"></a>
+                </div>
               </div>
 
             </section> <!-- #contact -->
