Fix responsiveness of contact box

--- a/index.html
+++ b/index.html
@@ -48,26 +48,26 @@
             <nav class="js-nav">
               <ul class="nav-items-container">
 
-                <li data-nav-item-id="page-1" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-nav-item js-nav-item pull-xs-left">
-                    <a href="#page-1" class="block-keep-ratio-content box-nav-item-link">
+                <li data-nav-item-id="about" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-nav-item js-nav-item pull-xs-left">
+                    <a href="#about" class="block-keep-ratio-content box-nav-item-link">
                         <span class="box-text box-text-nav-item flexbox-center">About</span>
                     </a>
                 </li>
 
-                <li data-nav-item-id="page-2" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-nav-item js-nav-item pull-xs-right">
-                    <a href="#page-2" class="block-keep-ratio-content box-nav-item-link">
+                <li data-nav-item-id="projects" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-nav-item js-nav-item pull-xs-right">
+                    <a href="#projects" class="block-keep-ratio-content box-nav-item-link">
                         <span class="box-text box-text-nav-item flexbox-center">Projects</span>
                     </a>
                 </li>
 
-                <li data-nav-item-id="page-3" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-nav-item js-nav-item pull-xs-left">
-                    <a href="#page-3" class="block-keep-ratio-content box-nav-item-link">
+                <li data-nav-item-id="resume" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-nav-item js-nav-item pull-xs-left">
+                    <a href="#resume" class="block-keep-ratio-content box-nav-item-link">
                         <span class="box-text box-text-nav-item flexbox-center">Resume</span>
                     </a>
                 </li>
 
-                <li data-nav-item-id="page-4" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-nav-item js-nav-item pull-xs-right">
-                    <a href="#page-4" class="block-keep-ratio-content box-nav-item-link">
+                <li data-nav-item-id="contact" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-nav-item js-nav-item pull-xs-right">
+                    <a href="#contact" class="block-keep-ratio-content box-nav-item-link">
                         <span class="box-text box-text-nav-item flexbox-center">Contact</span>
                     </a>
                 </li>
@@ -80,7 +80,7 @@
         <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 col-xl-7">
           <div class="content-wrapper js-content-wrapper">
             <!-- about -->
-            <section data-page-id="page-1" class="content js-content">
+            <section data-page-id="about" class="content js-content">
 
               <header class="box margin-b-20">
                 <h2 class="box-text page-title-text">About Me</h2>
@@ -101,7 +101,7 @@
             </section> <!-- #about -->
 
             <!-- gallery -->
-            <section data-page-id="page-2" class="content content-gallery js-content">
+            <section data-page-id="projects" class="content content-gallery js-content">
 
               <header class="box box-border margin-b-20">
                   <h2 class="box-text page-title-text">Projects</h2>
@@ -134,7 +134,7 @@
             </section> <!-- #projects -->
 
             <!-- services -->
-            <section data-page-id="page-3" class="content js-content margin-t-30p">
+            <section data-page-id="resume" class="content js-content margin-t-30p">
 
               <header class="box margin-b-20">
                 <h2 class="box-text page-title-text">Resume</h2>
@@ -147,14 +147,13 @@
             </section> <!-- #resume -->
 
             <!-- contact -->
-            <section data-page-id="page-4" class="content js-content margin-t-30p">
+            <section data-page-id="contact" class="content js-content margin-t-30p">
 
               <header class="box margin-b-20">
-
-                  <h2 class="box-text page-title-text">Contact Me</h2>
+                <h2 class="box-text page-title-text">Contact Me</h2>
               </header>
 
-              <div class="content-text contact-icons">
+              <div class="content-text contact-icons col-md-12 col-sm-12 col-xs-12">
                 <div class="col-md-4 col-sm-4 col-xs-4">
                   <a href="http://github.com/jonwhuang" target="_blank"><img src="/img/github.png"></a>
                 </div>
