--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                   <div id="slider" class="flexslider">
                     <ul class="slides">
-                      <li><img src="img/slider/slide1.jpg" alt="Slide 1" /></li>
+                      <li><img src="img/slider/LocalLiveMusic.png" alt="Slide 1" /></li>
                       <li><img src="img/slider/slide2.jpg" alt="Slide 2" /></li>
                       <li><img src="img/slider/slide3.jpg" alt="Slide 3" /></li>
                     </ul>
@@ -121,7 +121,7 @@
 
                   <div id="carousel" class="flexslider">
                     <ul class="slides">
-                      <li><img src="img/slider/thumb1.jpg" alt="Thumbnail 1" /></li>
+                      <li><img src="img/slider/LocalLiveMusic-thumb.png" alt="Thumbnail 1" /></li>
                       <li><img src="img/slider/thumb2.jpg" alt="Thumbnail 2" /></li>
                       <li><img src="img/slider/thumb3.jpg" alt="Thumbnail 3" /></li>
                     </ul>
