--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 
                   <div id="slider" class="flexslider">
                     <ul class="slides">
-                      <li><img src="img/slider/LocalLiveMusic.png" alt="Slide 1" /></li>
-                      <li><img src="img/slider/slide2.jpg" alt="Slide 2" /></li>
+                      <li><img src="img/slider/LocalLiveMusic-full.png" alt="Slide 1" /></li>
+                      <li><img src="img/slider/TAP-full.png" alt="Slide 2" /></li>
                       <li><img src="img/slider/slide3.jpg" alt="Slide 3" /></li>
                     </ul>
                   </div> <!-- #slider -->
@@ -122,7 +122,7 @@
                   <div id="carousel" class="flexslider">
                     <ul class="slides">
                       <li><img src="img/slider/LocalLiveMusic-thumb.png" alt="Thumbnail 1" /></li>
-                      <li><img src="img/slider/thumb2.jpg" alt="Thumbnail 2" /></li>
+                      <li><img src="img/slider/TAP-thumb.png" alt="Thumbnail 2" /></li>
                       <li><img src="img/slider/thumb3.jpg" alt="Thumbnail 3" /></li>
                     </ul>
                   </div>  <!-- #carousel -->
