--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container-fluid">
 
       <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 col-xl-5">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
 
           <div class="header">
 
@@ -77,7 +77,7 @@
           </div> <!-- .header -->
         </div>
 
-        <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 col-xl-7">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 col-xl-8">
           <div class="content-wrapper js-content-wrapper">
             <!-- about -->
             <section data-page-id="about" class="content js-content">
@@ -115,7 +115,7 @@
                     <ul class="slides">
                       <li><img src="img/slider/LocalLiveMusic-full.png" alt="Slide 1" /></li>
                       <li><img src="img/slider/TAP-full.png" alt="Slide 2" /></li>
-                      <li><img src="img/slider/slide3.jpg" alt="Slide 3" /></li>
+                      <li><img src="img/slider/MA-full.png" alt="Slide 3" /></li>
                     </ul>
                   </div> <!-- #slider -->
 
@@ -123,7 +123,7 @@
                     <ul class="slides">
                       <li><img src="img/slider/LocalLiveMusic-thumb.png" alt="Thumbnail 1" /></li>
                       <li><img src="img/slider/TAP-thumb.png" alt="Thumbnail 2" /></li>
-                      <li><img src="img/slider/thumb3.jpg" alt="Thumbnail 3" /></li>
+                      <li><img src="img/slider/MA-thumb.png" alt="Thumbnail 3" /></li>
                     </ul>
                   </div>  <!-- #carousel -->
 
@@ -170,15 +170,6 @@
         </div>
 
       </div>
-
-        <!-- footer row -->
-      <footer class="row footer js-footer">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-
-<!--           <p class="copyright-text">Copyright &copy; 2016 Jonathan Huang</p> -->
-
-        </div>
-      </footer>
 
     </div>  <!-- .container-fluid -->
 
