--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container-fluid">
 
       <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+        <div class="col-xs-12 col-sm-12 col-md-5 col-lg-4 col-xl-4">
 
           <div class="header">
 
@@ -77,10 +77,11 @@
           </div> <!-- .header -->
         </div>
 
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 col-xl-8">
+
+        <div class="col-xs-12 col-sm-12 col-md-7 col-lg-8 col-xl-8">
           <div class="content-wrapper js-content-wrapper">
             <!-- about -->
-            <section data-page-id="about" class="content js-content">
+            <section data-page-id="about" class="content js-content" id="about">
 
               <header class="box margin-b-20">
                 <h2 class="box-text page-title-text">About Me</h2>
@@ -101,7 +102,7 @@
             </section> <!-- #about -->
 
             <!-- gallery -->
-            <section data-page-id="projects" class="content content-gallery js-content">
+            <section data-page-id="projects" class="content content-gallery js-content" id="projects">
 
               <header class="box box-border margin-b-20">
                   <h2 class="box-text page-title-text">Projects</h2>
@@ -134,7 +135,7 @@
             </section> <!-- #projects -->
 
             <!-- services -->
-            <section data-page-id="resume" class="content js-content margin-t-15p">
+            <section data-page-id="resume" class="content js-content margin-t-15p" id="resume">
 
               <header class="box margin-b-20">
                 <h2 class="box-text page-title-text">Resume</h2>
@@ -147,7 +148,7 @@
             </section> <!-- #resume -->
 
             <!-- contact -->
-            <section data-page-id="contact" class="content js-content margin-t-15p">
+            <section data-page-id="contact" class="content js-content margin-t-15p" id="contact">
 
               <header class="box margin-b-20">
                 <h2 class="box-text page-title-text">Contact Me</h2>
