Add profile picture

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
               </header>
 
               <div class="content-text">
+                <img class="profile-pic" src="img/pfpic.jpg">
                 <p>
                   Hello! I'm a software engineer and a recent graduate from Dev Bootcamp. Before becoming enveloped in the world of programming, I graduated from UC San Diego with a B.S. in Human Biology. I loved the fast-paced atmosphere of the health care industry selflessly focused on helping out others.
                 </p>
