--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 
                   <div id="slider" class="flexslider">
                     <ul class="slides">
-                      <li><img src="img/slider/LocalLiveMusic-full.png" alt="Slide 1" /></li>
-                      <li><img src="img/slider/TAP-full.png" alt="Slide 2" /></li>
+                      <li><a target="_blank" href="http://locallivemusic.herokuapp.com"><img src="img/slider/LocalLiveMusic-full.png" alt="Slide 1" /></a></li>
+                      <li><a target="_blank" href="http://thermo-aggregation-project.herokuapp.com"><img src="img/slider/TAP-full.png" alt="Slide 2" /></a></li>
                       <li><img src="img/slider/MA-full.png" alt="Slide 3" /></li>
                     </ul>
                   </div> <!-- #slider -->
