Adjust css for project slide navigation

--- a/index.html
+++ b/index.html
@@ -115,9 +115,19 @@
 
                   <div id="slider" class="flexslider">
                     <ul class="slides">
-                      <li><a target="_blank" href="http://locallivemusic.herokuapp.com"><img src="img/slider/LocalLiveMusic-full.png" alt="Slide 1" /></a></li>
-                      <li><a target="_blank" href="http://thermo-aggregation-project.herokuapp.com"><img src="img/slider/TAP-full.png" alt="Slide 2" /></a></li>
-                      <li><img src="img/slider/MA-full.png" alt="Slide 3" /></li>
+                      <li>
+                        <a target="_blank" href="http://locallivemusic.herokuapp.com"><img src="img/slider/LocalLiveMusic-full.png" alt="Slide 1" /></a>
+                        <p class="project-desc">Find tonight's nearby local music venues in San Francisco, CA!</p>
+                        <p class="project-desc">- Dev Bootcamp Jan 2016 Hackathon</p>
+                      </li>
+                      <li>
+                        <a target="_blank" href="http://thermo-aggregation-project.herokuapp.com"><img src="img/slider/TAP-full.png" alt="Slide 2" /></a>
+                        <p>test</p>
+                      </li>
+                      <li>
+                        <img src="img/slider/MA-full.png" alt="Slide 3" />
+                        <p>test</p>
+                      </li>
                     </ul>
                   </div> <!-- #slider -->
 
@@ -143,7 +153,7 @@
               </header>
 
               <div class="content-text">
-                <h4>Here's my Resume!</h4>
+                <h4>Resume!</h4>
               </div>
 
             </section> <!-- #resume -->
