Add visit site tag

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   Near the end of my undergraduate career, I began to feel that the idea of being a doctor was mundane. Hearing my worries, a friend nudged me towards computer science. My first introductory course to C++ made me realize the exhilarating and endless possibilities of programming. With how quick the technology industry is expanding today, there are so many new technologies to learn and problems to solve. Coding provides the perfect opportunity to build something to potentially change people's lives.
                 </p>
                 <p>
-                  When I'm not coding it out, I enjoy taking walks, spending time with friends, and eating new and different foods. Please feel free to contact me about anything!
+                  When I'm not coding, I enjoy taking walks, spending time with friends, and eating new and different foods. Please feel free to contact me about anything!
                 </p>
               </div>
 
@@ -112,8 +112,10 @@
               <div class="content-text content-text-gallery">
 
                 <div class="flexslider-wrapper">
-
                   <div id="slider" class="flexslider">
+                    <div class="slider-link">
+                      <p>Visit Site</p>
+                    </div>
                     <ul class="slides">
                       <li>
                         <a target="_blank" href="http://locallivemusic.herokuapp.com"><img src="img/slider/LocalLiveMusic-full.png" alt="Slide 1" /></a>
@@ -122,11 +124,11 @@
                       </li>
                       <li>
                         <a target="_blank" href="http://thermo-aggregation-project.herokuapp.com"><img src="img/slider/TAP-full.png" alt="Slide 2" /></a>
-                        <p>test</p>
+                        <p class="project-desc">Monitor human temperature readings in communities throughout the nation for early signs of potential public health concerns</p>
                       </li>
                       <li>
                         <img src="img/slider/MA-full.png" alt="Slide 3" />
-                        <p>test</p>
+                        <p class="project-desc">Platform providing sales data analytics for small businesses</p>
                       </li>
                     </ul>
                   </div> <!-- #slider -->
