Add desc to third proj

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                       <li>
                         <img src="img/slider/MA-full.png" alt="Slide 3" />
                         <p class="project-desc">Platform providing sales data analytics for small businesses</p>
+                        <p class="project-desc">- Mortar Analytics</p>
                       </li>
                     </ul>
                   </div> <!-- #slider -->
