Fade toggle for game

--- a/index.html
+++ b/index.html
@@ -78,90 +78,95 @@
           </div> <!-- .header -->
         </div>
 
-        <div class="col-xs-12 col-sm-12 col-md-7 col-lg-8 col-xl-8 secret-game">
-          <header class="box margin-b-20">
-            <h4 class="box-text">This was my first ever Javascript game built during Phase 0 of DBC</h4>
-          </header>
+        <div class="col-xs-12 col-sm-12 col-md-7 col-lg-8 col-xl-8">
+          <div class="secret-game">
+            <header class="box margin-b-20">
+              <h4 class="box-text">This was my first ever Javascript game built during Phase 0 of DBC</h4>
+            </header>
 
-          <table>
-            <tr>
-              <td class="square"><img id="91"></img></td>
-              <td class="square"><img id="92"></img></td>
-              <td class="square"><img id="93"></img></td>
-              <td class="square"><img id="94"></img></td>
-              <td class="square"><img id="95"></img></td>
-            </tr>
-            <tr>
-              <td class="square"><img id="81"></img></td>
-              <td class="square"><img id="82"></img></td>
-              <td class="square"><img id="83"></img></td>
-              <td class="square"><img id="84"></img></td>
-              <td class="square"><img id="85"></img></td>
-            </tr>
-            <tr>
-              <td class="square"><img id="71"></img></td>
-              <td class="square"><img id="72"></img></td>
-              <td class="square"><img id="73"></img></td>
-              <td class="square"><img id="74"></img></td>
-              <td class="square"><img id="75"></img></td>
-            </tr>
-            <tr>
-              <td class="square"><img id="61"></img></td>
-              <td class="square"><img id="62"></img></td>
-              <td class="square"><img id="63"></img></td>
-              <td class="square"><img id="64"></img></td>
-              <td class="square"><img id="65"></img></td>
-            </tr>
-            <tr>
-              <td class="square"><img id="51"></img></td>
-              <td class="square"><img id="52"></img></td>
-              <td class="square"><img id="53"></img></td>
-              <td class="square"><img id="54"></img></td>
-              <td class="square"><img id="55"></img></td>
-            </tr>
-            <tr>
-              <td class="square"><img id="41"></img></td>
-              <td class="square"><img id="42"></img></td>
-              <td class="square"><img id="43"></img></td>
-              <td class="square"><img id="44"></img></td>
-              <td class="square"><img id="45"></img></td>
-            </tr>
-            <tr>
-              <td class="square"><img id="31"></img></td>
-              <td class="square"><img id="32"></img></td>
-              <td class="square"><img id="33"></img></td>
-              <td class="square"><img id="34"></img></td>
-              <td class="square"><img id="35"></img></td>
-            </tr>
-            <tr>
-              <td class="square"><img id="21"></img></td>
-              <td class="square"><img id="22"></img></td>
-              <td class="square"><img id="23"></img></td>
-              <td class="square"><img id="24"></img></td>
-              <td class="square"><img id="25"></img></td>
-            </tr>
-            <tr>
-              <td class="square"><img id="11"></img></td>
-              <td class="square"><img id="12"></img></td>
-              <td class="square"><img id="13"></img></td>
-              <td class="square"><img id="14"></img></td>
-              <td class="square"><img id="15"></img></td>
-            </tr>
-            <tr>
-              <td class="square"><img id="01"></img></td>
-              <td class="square"><img id="02"></img></td>
-              <td class="square"><img id="03"></img></td>
-              <td class="square"><img id="04"></img></td>
-              <td class="square"><img id="05"></img></td>
-            </tr>
-          </table>
-          <div class="game-instructions">
-            <p id="mission">Collect as many coins as you can!<br>Game ends when you miss five coins.</p>
-            <p id="commands">Use the arrow keys to move left and right.</p>
-            <div id="high-score">High Score: 0</div>
-            <div id="missed">Missed: 0</div>
-            <div id="game-over">You've collected 0 coins.</div>
-            <button onclick="start()">Start Game</button>
+            <table>
+              <tr>
+                <td class="square"><img id="91"></img></td>
+                <td class="square"><img id="92"></img></td>
+                <td class="square"><img id="93"></img></td>
+                <td class="square"><img id="94"></img></td>
+                <td class="square"><img id="95"></img></td>
+              </tr>
+              <tr>
+                <td class="square"><img id="81"></img></td>
+                <td class="square"><img id="82"></img></td>
+                <td class="square"><img id="83"></img></td>
+                <td class="square"><img id="84"></img></td>
+                <td class="square"><img id="85"></img></td>
+              </tr>
+              <tr>
+                <td class="square"><img id="71"></img></td>
+                <td class="square"><img id="72"></img></td>
+                <td class="square"><img id="73"></img></td>
+                <td class="square"><img id="74"></img></td>
+                <td class="square"><img id="75"></img></td>
+              </tr>
+              <tr>
+                <td class="square"><img id="61"></img></td>
+                <td class="square"><img id="62"></img></td>
+                <td class="square"><img id="63"></img></td>
+                <td class="square"><img id="64"></img></td>
+                <td class="square"><img id="65"></img></td>
+              </tr>
+              <tr>
+                <td class="square"><img id="51"></img></td>
+                <td class="square"><img id="52"></img></td>
+                <td class="square"><img id="53"></img></td>
+                <td class="square"><img id="54"></img></td>
+                <td class="square"><img id="55"></img></td>
+              </tr>
+              <tr>
+                <td class="square"><img id="41"></img></td>
+                <td class="square"><img id="42"></img></td>
+                <td class="square"><img id="43"></img></td>
+                <td class="square"><img id="44"></img></td>
+                <td class="square"><img id="45"></img></td>
+              </tr>
+              <tr>
+                <td class="square"><img id="31"></img></td>
+                <td class="square"><img id="32"></img></td>
+                <td class="square"><img id="33"></img></td>
+                <td class="square"><img id="34"></img></td>
+                <td class="square"><img id="35"></img></td>
+              </tr>
+              <tr>
+                <td class="square"><img id="21"></img></td>
+                <td class="square"><img id="22"></img></td>
+                <td class="square"><img id="23"></img></td>
+                <td class="square"><img id="24"></img></td>
+                <td class="square"><img id="25"></img></td>
+              </tr>
+              <tr>
+                <td class="square"><img id="11"></img></td>
+                <td class="square"><img id="12"></img></td>
+                <td class="square"><img id="13"></img></td>
+                <td class="square"><img id="14"></img></td>
+                <td class="square"><img id="15"></img></td>
+              </tr>
+              <tr>
+                <td class="square"><img id="01"></img></td>
+                <td class="square"><img id="02"></img></td>
+                <td class="square"><img id="03"></img></td>
+                <td class="square"><img id="04"></img></td>
+                <td class="square"><img id="05"></img></td>
+              </tr>
+            </table>
+            <div class="game-instructions">
+              <div class="mission">
+                <p>Collect as many coins as you can!</p>
+                <p>Game ends when you miss five coins.</p>
+                <p>Use the arrow keys to move left and right.</p>
+              </div>
+              <div id="high-score">High Score: 0</div>
+              <div id="missed">Missed: 0</div>
+              <div id="game-over">You've collected 0 coins.</div>
+              <button class="start-game">Start Game</button>
+            </div>
           </div>
         </div>
 
