--- a/index.html
+++ b/index.html
@@ -192,13 +192,29 @@
             </section> <!-- #resume -->
 
             <!-- contact -->
-            <section data-page-id="contact" class="content js-content margin-t-15p" id="contact">
+            <section data-page-id="contact" class="content js-content contact" id="contact">
 
               <header class="box margin-b-20">
                 <h2 class="box-text page-title-text">Contact Me</h2>
               </header>
 
               <div class="content-text contact-icons col-md-12 col-sm-12 col-xs-12">
+                <form action="index.html" method="post" class="contact-form">
+                  <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6 form-group-2-col-left">
+                      <input type="text" id="contact_name" name="contact_name" class="form-control" placeholder="Name" required/>
+                  </div>
+                  <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6 form-group-2-col-right">
+                      <input type="email" id="contact_email" name="contact_email" class="form-control" placeholder="Email" required/>
+                  </div>
+                  <div class="form-group">
+                      <input type="text" id="contact_subject" name="contact_subject" class="form-control" placeholder="Subject" required/>
+                  </div>
+                  <div class="form-group">
+                      <textarea id="contact_message" name="contact_message" class="form-control" rows="4" placeholder="Message" required></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-primary submit-btn">Send</button>
+                </form>
+
                 <div class="col-md-4 col-sm-4 col-xs-4">
                   <a href="http://github.com/jonwhuang" target="_blank"><img src="/img/github.png"></a>
                 </div>
