Change resume box size

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             </section> <!-- #projects -->
 
             <!-- services -->
-            <section data-page-id="resume" class="content js-content margin-t-15p" id="resume">
+            <section data-page-id="resume" class="content js-content margin-t-15p resume" id="resume">
 
               <header class="box margin-b-20">
                 <h2 class="box-text page-title-text">Resume</h2>
