--- a/index.html
+++ b/index.html
@@ -199,18 +199,18 @@
               </header>
 
               <div class="content-text contact-icons col-md-12 col-sm-12 col-xs-12">
-                <form action="index.html" method="post" class="contact-form">
+                <form action="//formspree.io/jonwhuang@gmail.com" method="POST" class="contact-form">
                   <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6 form-group-2-col-left">
-                      <input type="text" id="contact_name" name="contact_name" class="form-control" placeholder="Name" required/>
+                      <input type="text" id="contact_name" name="name" class="form-control" placeholder="Name" required/>
                   </div>
                   <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6 form-group-2-col-right">
-                      <input type="email" id="contact_email" name="contact_email" class="form-control" placeholder="Email" required/>
+                      <input type="email" id="contact_email" name="_replyto" class="form-control" placeholder="Email" required/>
                   </div>
                   <div class="form-group">
-                      <input type="text" id="contact_subject" name="contact_subject" class="form-control" placeholder="Subject" required/>
+                      <input type="text" id="contact_subject" name="subject" class="form-control" placeholder="Subject" required/>
                   </div>
                   <div class="form-group">
-                      <textarea id="contact_message" name="contact_message" class="form-control" rows="4" placeholder="Message" required></textarea>
+                      <textarea id="contact_message" name="message" class="form-control" rows="4" placeholder="Message" required></textarea>
                   </div>
                   <button type="submit" class="btn btn-primary submit-btn">Send</button>
                 </form>
