Add ajax to contact form

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             </section> <!-- #projects -->
 
             <!-- services -->
-            <section data-page-id="resume" class="content js-content margin-t-15p resume" id="resume">
+            <section data-page-id="resume" class="content js-content resume" id="resume">
 
               <header class="box margin-b-20">
                 <h2 class="box-text page-title-text">Resume</h2>
@@ -243,6 +243,6 @@
     <script src="js/templatemo-script.js"></script>
     <script src="js/projects.js"></script>
     <script src="js/game.js"></script>
-
+    <script src="js/contact.js"></script>
   </body>
 </html>
