Small changes to about me

--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
               <div class="content-text">
                 <img class="profile-pic" src="img/pfpic.jpg">
                 <p>
-                  Hello! I'm a software engineer and a recent graduate from Dev Bootcamp. Before becoming enveloped in the world of programming, I graduated from UC San Diego with a B.S. in Human Biology. I loved the fast-paced atmosphere of the health care industry selflessly focused on helping out others.
+                  Hello! I'm a <b>software engineer</b> and a recent graduate from Dev Bootcamp. Before becoming enveloped in the world of programming, I graduated from UC San Diego with a B.S. in Human Biology. I loved the <b>fast-paced</b> atmosphere of the health care industry selflessly focused on <b>helping out</b> others.
                 </p>
                 <p>
-                  Near the end of my undergraduate career, I began to feel that the idea of being a doctor was mundane. Hearing my worries, a friend nudged me towards computer science. My first introductory course to C++ made me realize the exhilarating and endless possibilities of programming. With how quick the technology industry is expanding today, there are so many new technologies to learn and problems to solve. Coding provides the perfect opportunity to build something to potentially change people's lives.
+                  Near the end of my undergraduate career, I began to feel that the idea of being a doctor was mundane. Hearing my worries, a friend nudged me towards computer science. My first introductory course to C++ made me realize the <b>exhilarating and endless possibilities</b> of programming. With how quick the technology industry is expanding today, there are so many new technologies to learn and problems to solve. Coding provides the perfect opportunity to build something providing a great UX and towards making a difference.
                 </p>
                 <p>
-                  When I'm not coding, I enjoy taking walks, spending time with friends, and eating new and different foods. Please feel free to contact me about anything!
+                  When I'm not coding, I enjoy taking walks, spending time with friends, and eating new and different foods. Feel free to contact me about anything!
                 </p>
               </div>
 
@@ -149,7 +149,7 @@
                       </li>
                       <li>
                         <a target="_blank" href="http://thermo-aggregation-project.herokuapp.com">
-                          <div class="overlay-text slide-two">
+                          <div class="overlay-text">
                             <p>Visit Site</p>
                           </div>
                         </a>
@@ -157,6 +157,11 @@
                         <p class="project-desc">Monitor human temperature readings in communities throughout the nation for early signs of potential public health concerns</p>
                       </li>
                       <li>
+                        <a href="#">
+                          <div class="overlay-text coming-soon">
+                            <p>Coming Soon</p>
+                          </div>
+                        </a>
                         <img src="img/slider/MA-full.png" alt="Slide 3" />
                         <p class="project-desc">Platform providing sales data analytics for small businesses</p>
                         <p class="project-desc">- Mortar Analytics</p>
@@ -186,7 +191,7 @@
               </header>
 
               <div class="content-text">
-                <h4>Resume!</h4>
+                <h4>Resume will be added shortly!</h4>
               </div>
 
             </section> <!-- #resume -->
