Add basic color scheme

--- a/index.html
+++ b/index.html
@@ -24,14 +24,6 @@
 
   <body class="page">
 
-    <!-- background images -->
-    <div class="page-bg-imgs-list">
-        <img src="img/story-bg-1.jpg" id="page-1-img" class="main-img" alt="About">
-        <img src="img/story-bg-2.jpg" id="page-2-img" alt="Gallery">
-        <img src="img/story-bg-3.jpg" id="page-3-img" alt="Services">
-        <img src="img/story-bg-4.jpg" id="page-4-img" alt="Contact">
-    </div>
-
     <div class="container-fluid">
 
       <div class="row">
@@ -52,25 +44,25 @@
 
                 <li data-nav-item-id="about" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-nav-item js-nav-item pull-xs-left">
                     <a href="#about" class="block-keep-ratio-content box-nav-item-link">
-                        <span class="box-text box-text-nav-item flexbox-center">About</span>
+                        <span class="box-text box-text-nav-item flexbox-center about-box">About</span>
                     </a>
                 </li>
 
                 <li data-nav-item-id="projects" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-nav-item js-nav-item pull-xs-right">
                     <a href="#projects" class="block-keep-ratio-content box-nav-item-link">
-                        <span class="box-text box-text-nav-item flexbox-center">Projects</span>
+                        <span class="box-text box-text-nav-item flexbox-center project-box">Projects</span>
                     </a>
                 </li>
 
                 <li data-nav-item-id="resume" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-nav-item js-nav-item pull-xs-left">
                     <a href="#resume" class="block-keep-ratio-content box-nav-item-link">
-                        <span class="box-text box-text-nav-item flexbox-center">Resume</span>
+                        <span class="box-text box-text-nav-item flexbox-center resume-box">Resume</span>
                     </a>
                 </li>
 
                 <li data-nav-item-id="contact" class="block-keep-ratio block-keep-ratio-1-1 block-width-half box box-nav-item js-nav-item pull-xs-right">
                     <a href="#contact" class="block-keep-ratio-content box-nav-item-link">
-                        <span class="box-text box-text-nav-item flexbox-center">Contact</span>
+                        <span class="box-text box-text-nav-item flexbox-center contact-box">Contact</span>
                     </a>
                 </li>
 
@@ -108,7 +100,7 @@
             <section data-page-id="about" class="content js-content" id="about">
 
               <header class="box margin-b-20">
-                <h2 class="box-text page-title-text">About Me</h2>
+                <h2 class="box-text page-title-text about-box">About Me</h2>
               </header>
 
               <div class="content-text">
@@ -130,7 +122,7 @@
             <section data-page-id="projects" class="content content-gallery js-content" id="projects">
 
               <header class="box box-border margin-b-20">
-                  <h2 class="box-text page-title-text">Projects</h2>
+                  <h2 class="box-text page-title-text project-box">Projects</h2>
               </header>
 
               <div class="content-text content-text-gallery">
@@ -187,7 +179,7 @@
             <section data-page-id="resume" class="content js-content resume" id="resume">
 
               <header class="box margin-b-20">
-                <h2 class="box-text page-title-text">Resume</h2>
+                <h2 class="box-text page-title-text resume-box">Resume</h2>
               </header>
 
               <div class="content-text">
@@ -200,7 +192,7 @@
             <section data-page-id="contact" class="content js-content contact" id="contact">
 
               <header class="box margin-b-20">
-                <h2 class="box-text page-title-text">Contact Me</h2>
+                <h2 class="box-text page-title-text contact-box">Contact Me</h2>
               </header>
 
               <div class="content-text contact-icons col-md-12 col-sm-12 col-xs-12">
