Add arrow images to page

--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
               <div id="game-log">You've collected 0 coins.</div>
               <button class="start-game">Start Game</button>
             </div>
+            <div class="mobile-controls">
+              <img src="img/left_grey.png">
+              <img src="img/right_grey.png">
+            </div>
           </div>
         </div>
 
