--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
               <button class="start-game">Start Game</button>
             </div>
             <div class="mobile-controls">
-              <img src="img/left_grey.png">
-              <img src="img/right_grey.png">
+              <a href="#"><img id="left" src="img/left_grey.png"></a>
+              <a href="#"><img id="right" src="img/right_grey.png"></a>
             </div>
           </div>
         </div>
